fix overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,4 +37,5 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
+  overflow-x: hidden;
 }
